# asteroids

./: .gitignore  Cargo.toml  README.md
src/: asteroid.rs  main.rs  math.rs  ship.rs  star.rs  window.rs
src/entity/: asteroid.rs  mod.rs  star.rs
src/entity/ship/: body.rs  laser.rs  mod.rs
src/math/: functions.rs  mod.rs  vec2.rs
src/render/: mod.rs  text.rs  window.rs
