[package]
name = "asteroids"
version = "0.1.0"
authors = ["robertazzopardi <robertazzopardi@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
default-features = false
features = ["gfx","ttf"]
